# llama.cpp

./: .gitmodules  CMakeLists.txt  README.md  tsi-pkg-build.sh
common/: CMakeLists.txt
docs/: build.md
examples/gguf/: CMakeLists.txt
examples/gguf-hash/: CMakeLists.txt
examples/lookup/: CMakeLists.txt
examples/quantize-stats/: CMakeLists.txt
examples/simple/: CMakeLists.txt  simple-backend-tsi.cpp
examples/simple-chat/: CMakeLists.txt
ggml/: CMakeLists.txt  CPPLINT.cfg  tsavorite-readme
ggml/examples/: CMakeLists.txt
ggml/examples/mnist/: CMakeLists.txt
ggml/examples/sam/: CMakeLists.txt
ggml/examples/simple/: CMakeLists.txt  add.cpp  mult.cpp
ggml/examples/yolo/: CMakeLists.txt
ggml/include/: ggml-tsavorite.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cpu/: CMakeLists.txt
ggml/src/ggml-tsavorite/: CMakeLists.txt  ggml-tsavorite.cpp
ggml/src/ggml-tsavorite/include/: TestModel.h
ggml/tests/: CMakeLists.txt
tests/: CMakeLists.txt
